Fix/webpack sourcemaps (#337)
* enable sourcemaps ES2015+ for js

* fix buttons scrollbar in faq sec

* fix preview pic in qashgai article

* preload pics after 3 seconds
closes #329

* change wheel position for realistic
closes #195

* remove aside for screens < 1330, and show big modal btn
closes #335

--- a/assets/less/1_base/layout.less
+++ b/assets/less/1_base/layout.less
@@ -322,6 +322,16 @@ body {
   }
 }
 
+/* ---------- ADAPTIVE < 1330 ------------------------------------------------*/
+@media (max-width: 1330px) {
+  .site {
+
+    &-side {
+      display: none;
+    }
+  }
+}
+
 /* ---------- ADAPTIVE < 1024 ------------------------------------------------*/
 @media (max-width: 1024px) {
   .page {
@@ -338,13 +348,6 @@ body {
   .container {
     padding-left: 15px;
     padding-right: 15px;
-  }
-
-  .site {
-
-    &-side {
-      display: none;
-    }
   }
 
   .page {
