--- a/assets/less/3_blocks/block_scrollbars.less
+++ b/assets/less/3_blocks/block_scrollbars.less
@@ -25,4 +25,5 @@
 .js-scroll-y {
   scrollbar-color: @red #FFFFFF ;
   scrollbar-width: thin;
+  overflow: auto;
 }
