--- a/assets/less/4_sections/sec_start.less
+++ b/assets/less/4_sections/sec_start.less
@@ -397,7 +397,7 @@
   }
 
   &__wheel-rt {
-    right: 120px;
+    right: 119px;
     bottom: 15px;
   }
 }
@@ -417,12 +417,12 @@
   }
 
   &__wheel-lt {
-    left: 109px;
-    bottom: 12px;
+    left: 107px;
+    bottom: 10px;
   }
 
   &__wheel-rt {
-    right: 86px;
+    right: 85px;
     bottom: 10px;
   }
 }
@@ -442,7 +442,7 @@
   }
 
   &__wheel-lt {
-    left: 80px;
+    left: 74px;
     bottom: 10px;
   }
 
@@ -611,12 +611,12 @@
     }
 
     &__wheel-lt {
-      left: 73px;
+      left: 72px;
       bottom: 9px;
     }
 
     &__wheel-rt {
-      right: 57px;
+      right: 56px;
       bottom: 7px;
     }
   }
@@ -630,7 +630,7 @@
     }
 
     &__wheel-lt {
-      left: 52px;
+      left: 50px;
       bottom: 9px;
     }
 
@@ -728,7 +728,7 @@
     }
 
     &__wheel-lt {
-      left: 61px;
+      left: 60px;
       bottom: 7px;
     }
 
@@ -747,7 +747,7 @@
     }
 
     &__wheel-lt {
-      left: 49px;
+      left: 48px;
       bottom: 6px;
     }
 
@@ -766,7 +766,7 @@
     }
 
     &__wheel-lt {
-      left: 35px;
+      left: 33px;
       bottom: 6px;
     }
 
